--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.jaxws21.classpath}
+    ${libs.jaxws21.classpath}:\
+    ${reference.GalgeSpellChecker.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,6 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.GalgeSpellChecker=../GalgeSpellChecker
+reference.GalgeSpellChecker.jar=${project.GalgeSpellChecker}/dist/GalgeSpellChecker.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -75,3 +78,4 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
+compile.on.save.unsupported.jaxws=true
